# k6-mcp-server

./: .env copy  .gitignore  README.md  hello.js  k6_server.py  main.py  pyproject.toml  requirements.txt
